--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -197,7 +197,9 @@
         "multicast.test.ts",
         "mdns.test.ts",
         "mdns.real.test.ts",
-        "coap.test.ts"
+        "coap.test.ts",
+        "mdnsReflectorServer.test.ts",
+        "mdnsReflectorClient.test.ts"
       ],
       "group": {
         "kind": "test",
