refactor: update test scripts to use cross-env for NODE_OPTIONS and improve consistency

--- a/package.json
+++ b/package.json
@@ -117,10 +117,10 @@
     "start:gc": "node --expose-gc ./dist/cli.js --debug --trace --loader",
     "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug --trace --loader",
     "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug --trace --loader",
-    "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=100%",
-    "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --maxWorkers=100% --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100, \\\"functions\\\": 100 } }\"",
-    "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --maxWorkers=100%",
-    "test:watch": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --watch --maxWorkers=100%",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --maxWorkers=100%",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch --maxWorkers=100%",
+    "test:verbose": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose --maxWorkers=100%",
+    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --maxWorkers=100% --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100, \\\"functions\\\": 100 } }\"",
     "test:vitest": "vitest run",
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
@@ -150,7 +150,7 @@
     "updateMatter:dev": "npm install --save-exact @matter/main@dev && npm install && npm run reset",
     "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run reset",
     "install:dependencies": "npm install --save-exact @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
-    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx marked",
+    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx cross-env marked",
     "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
     "install:eslint": "npm install --save-dev --save-exact eslint @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
     "install:jest": "npm install --save-dev --save-exact jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
@@ -178,6 +178,7 @@
     "@types/ws": "8.18.1",
     "@vitest/coverage-v8": "4.0.16",
     "@vitest/eslint-plugin": "1.6.4",
+    "cross-env": "10.1.0",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
