chore: update package-lock.json and improve test scripts for consistency

--- a/package.json
+++ b/package.json
@@ -117,10 +117,10 @@
     "start:gc": "node --expose-gc ./dist/cli.js --debug --trace --loader",
     "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug --trace --loader",
     "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug --trace --loader",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --maxWorkers=100%",
-    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch --maxWorkers=100%",
-    "test:verbose": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose --maxWorkers=100%",
-    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --maxWorkers=100% --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100, \\\"functions\\\": 100 } }\"",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --maxWorkers=100%",
+    "test:watch": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --watch --maxWorkers=100%",
+    "test:verbose": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --verbose --maxWorkers=100%",
+    "test:coverage": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --coverage --maxWorkers=100% --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100, \\\"functions\\\": 100 } }\"",
     "test:vitest": "vitest run",
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
