--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
   "engines": {
     "node": ">=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -104,12 +107,12 @@
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project tsconfig.json",
     "buildProduction": "tsc --project tsconfig.production.json",
     "cleanBuild": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run build",
     "cleanBuildProduction": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run buildProduction",
     "fetch:chip": "node scripts/fetch-chip.mjs",
-    "watch": "tsc --watch",
+    "watch": "tsc --project tsconfig.json --watch",
     "start": "node ./dist/cli.js",
     "start:bridge": "node ./dist/cli.js --bridge",
     "start:childbridge": "node ./dist/cli.js --childbridge",
@@ -153,9 +156,12 @@
     "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx cross-env marked",
     "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
     "install:eslint": "npm install --save-dev --save-exact eslint @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
+    "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier",
     "install:jest": "npm install --save-dev --save-exact jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
     "install:vitest": "npm install --save-dev --save-exact vitest @vitest/coverage-v8 @vitest/eslint-plugin",
-    "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier"
+    "buildAll": "npm --workspaces run build",
+    "lintAll": "npm --workspaces run lint",
+    "testAll": "npm --workspaces run test"
   },
   "dependencies": {
     "@matter/main": "0.15.6",
@@ -182,7 +188,7 @@
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jest": "29.11.0",
+    "eslint-plugin-jest": "29.12.0",
     "eslint-plugin-jsdoc": "61.5.0",
     "eslint-plugin-n": "17.23.1",
     "eslint-plugin-prettier": "5.5.4",
@@ -194,7 +200,7 @@
     "shx": "0.4.0",
     "ts-jest": "29.4.6",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.50.1",
+    "typescript-eslint": "8.51.0",
     "vitest": "4.0.16"
   }
 }
