--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,9 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "incremental": true,
-    "composite": true,
-    "target": "esnext",
-    "lib": ["ESNext"],
-    "module": "nodenext",
-    "rootDir": "./src",
-    "moduleResolution": "nodenext",
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "checkJs": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "outDir": "./dist",
-    "preserveConstEnums": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "alwaysStrict": true,
-    "noImplicitOverride": true,
-    "skipLibCheck": true
+    "outDir": "dist",
+    "rootDir": "src"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["**/*.spec.ts", "**/*.test.ts", "**/__test__/*"]
+  "include": ["src/**/*.ts", "package.json"],
+  "exclude": ["packages/**", "**/*.spec.ts", "**/*.test.ts", "**/__test__/*"]
 }
