--- a/docker/Dockerfile.main
+++ b/docker/Dockerfile.main
@@ -5,7 +5,7 @@ FROM node:22-bookworm-slim AS builder
 ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /app
-COPY ./package.json ./package-lock.json ./tsconfig.json ./tsconfig.production.json ./
+COPY ./package.json ./package-lock.json ./tsconfig.base.json ./tsconfig.json ./tsconfig.production.json ./
 COPY ./src ./src
 COPY ./frontend/package.json ./frontend/package.json
 COPY ./frontend/build ./frontend/build
