--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -11,13 +11,14 @@ RUN npm ci && \
   npm pack
 
 FROM node:24-alpine AS release
-WORKDIR /app
 
+# Install matterbridge
+WORKDIR /matterbridge
 COPY --from=base /matterbridge/*.tgz .
-RUN npm install npm@latest *.tgz --global --verbose --omit=dev && rm *.tgz
+RUN npm install *.tgz --global --verbose --omit=dev && rm *.tgz
 
-# Copy and execute the entrypoint script
-COPY ./docker/entrypoint.sh ./
-RUN chmod +x ./entrypoint.sh
-ENTRYPOINT ["./entrypoint.sh"]
+# Add Docker HEALTHCHECK
+HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
+  CMD curl --fail http://localhost:8283/health || exit 1
+
 CMD ["matterbridge", "-docker"]
