--- a/docker/Dockerfile.ubuntu
+++ b/docker/Dockerfile.ubuntu
@@ -42,10 +42,10 @@ RUN apt update && \
   apt clean && \
   rm -rf /var/lib/apt/lists/*
 
-# Install matterbridge and npm@latest
+# Install matterbridge
 WORKDIR /matterbridge    
 COPY --from=base /matterbridge/*.tgz .
-RUN npm install npm@latest *.tgz --global --omit=dev && rm *.tgz
+RUN npm install *.tgz --global --verbose --omit=dev && rm *.tgz
 
 # Add Docker HEALTHCHECK
 HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
