--- a/tsconfig.production.json
+++ b/tsconfig.production.json
@@ -1,6 +1,8 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "outDir": "dist",
+    "rootDir": "src",
     "incremental": false,
     "composite": false,
     "declaration": false,
@@ -8,6 +10,6 @@
     "sourceMap": false,
     "removeComments": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["**/*.spec.ts", "**/*.test.ts", "**/__test__/*"]
+  "include": ["src/**/*.ts", "package.json"],
+  "exclude": ["packages/**", "**/*.spec.ts", "**/*.test.ts", "**/__test__/*"]
 }
