--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.4.5",
+  "version": "3.4.6",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -49,6 +49,9 @@
   "engines": {
     "node": ">=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -104,12 +107,12 @@
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project tsconfig.json",
     "buildProduction": "tsc --project tsconfig.production.json",
     "cleanBuild": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run build",
     "cleanBuildProduction": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run buildProduction",
     "fetch:chip": "node scripts/fetch-chip.mjs",
-    "watch": "tsc --watch",
+    "watch": "tsc --project tsconfig.json --watch",
     "start": "node ./dist/cli.js",
     "start:bridge": "node ./dist/cli.js --bridge",
     "start:childbridge": "node ./dist/cli.js --childbridge",
@@ -117,10 +120,10 @@
     "start:gc": "node --expose-gc ./dist/cli.js --debug --trace --loader",
     "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug --trace --loader",
     "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug --trace --loader",
-    "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=100%",
-    "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --maxWorkers=100% --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100, \\\"functions\\\": 100 } }\"",
-    "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --maxWorkers=100%",
-    "test:watch": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --watch --maxWorkers=100%",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --maxWorkers=100%",
+    "test:watch": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --watch --maxWorkers=100%",
+    "test:verbose": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --verbose --maxWorkers=100%",
+    "test:coverage": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --coverage --maxWorkers=100% --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100, \\\"functions\\\": 100 } }\"",
     "test:vitest": "vitest run",
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
@@ -150,12 +153,23 @@
     "updateMatter:dev": "npm install --save-exact @matter/main@dev && npm install && npm run reset",
     "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run reset",
     "install:dependencies": "npm install --save-exact @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
-    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx marked",
+    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx cross-env marked",
     "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
     "install:eslint": "npm install --save-dev --save-exact eslint @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
+    "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier",
     "install:jest": "npm install --save-dev --save-exact jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
     "install:vitest": "npm install --save-dev --save-exact vitest @vitest/coverage-v8 @vitest/eslint-plugin",
-    "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier"
+    "buildAll": "npm --workspaces run build",
+    "lintAll": "npm --workspaces run lint",
+    "testAll": "npm --workspaces run test",
+    "docker:build:local:latest": "docker build -f docker/Dockerfile.main -t matterbridge:latest .",
+    "docker:run:local:latest": "docker run --rm -it --name matterbridge-latest matterbridge:latest",
+    "docker:build:local:dev": "docker build -f docker/Dockerfile.dev -t matterbridge:dev .",
+    "docker:run:local:dev": "docker run --rm -it --name matterbridge-dev matterbridge:dev",
+    "docker:build:local:ubuntu": "docker build -f docker/Dockerfile.ubuntu -t matterbridge:ubuntu .",
+    "docker:run:local:ubuntu": "docker run --rm -it --name matterbridge-ubuntu matterbridge:ubuntu",
+    "docker:build:local:alpine": "docker build -f docker/Dockerfile.alpine -t matterbridge:alpine .",
+    "docker:run:local:alpine": "docker run --rm -it --name matterbridge-alpine matterbridge:alpine"
   },
   "dependencies": {
     "@matter/main": "0.15.6",
@@ -177,11 +191,12 @@
     "@types/node": "25.0.3",
     "@types/ws": "8.18.1",
     "@vitest/coverage-v8": "4.0.16",
-    "@vitest/eslint-plugin": "1.6.3",
+    "@vitest/eslint-plugin": "1.6.4",
+    "cross-env": "10.1.0",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jest": "29.11.0",
+    "eslint-plugin-jest": "29.12.0",
     "eslint-plugin-jsdoc": "61.5.0",
     "eslint-plugin-n": "17.23.1",
     "eslint-plugin-prettier": "5.5.4",
@@ -193,7 +208,7 @@
     "shx": "0.4.0",
     "ts-jest": "29.4.6",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.50.1",
+    "typescript-eslint": "8.51.0",
     "vitest": "4.0.16"
   }
 }
