--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.4.6",
+  "version": "3.4.7",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -159,9 +159,9 @@
     "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier",
     "install:jest": "npm install --save-dev --save-exact jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
     "install:vitest": "npm install --save-dev --save-exact vitest @vitest/coverage-v8 @vitest/eslint-plugin",
-    "buildAll": "npm --workspaces run build",
-    "lintAll": "npm --workspaces run lint",
-    "testAll": "npm --workspaces run test",
+    "buildAll": "npm run build && npm --workspaces run build",
+    "lintAll": "npm run lint && npm --workspaces run lint",
+    "testAll": "npm run test && npm --workspaces run test",
     "docker:build:local:latest": "docker build -f docker/Dockerfile.main -t matterbridge:latest .",
     "docker:run:local:latest": "docker run --rm -it --name matterbridge-latest matterbridge:latest",
     "docker:build:local:dev": "docker build -f docker/Dockerfile.dev -t matterbridge:dev .",
@@ -191,19 +191,19 @@
     "@types/node": "25.0.3",
     "@types/ws": "8.18.1",
     "@vitest/coverage-v8": "4.0.16",
-    "@vitest/eslint-plugin": "1.6.4",
+    "@vitest/eslint-plugin": "1.6.5",
     "cross-env": "10.1.0",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jest": "29.12.0",
+    "eslint-plugin-jest": "29.12.1",
     "eslint-plugin-jsdoc": "61.5.0",
     "eslint-plugin-n": "17.23.1",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
     "jest": "30.2.0",
     "marked": "17.0.1",
-    "npm-check-updates": "19.2.0",
+    "npm-check-updates": "19.2.1",
     "prettier": "3.7.4",
     "shx": "0.4.0",
     "ts-jest": "29.4.6",
