--- a/package.json
+++ b/package.json
@@ -107,11 +107,11 @@
     }
   },
   "scripts": {
-    "build": "tsc --project tsconfig.json",
-    "buildProduction": "tsc --project tsconfig.production.json",
-    "cleanBuild": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run build",
-    "cleanBuildProduction": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run buildProduction",
-    "fetch:chip": "node scripts/fetch-chip.mjs",
+    "build": "tsc --project tsconfig.json && npm --workspaces run build",
+    "buildProduction": "tsc --project tsconfig.production.json && npm --workspaces run buildProduction",
+    "clean": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm --workspaces run clean",
+    "cleanBuild": "npm run clean && npm run build && npm --workspaces run cleanBuild",
+    "cleanBuildProduction": "npm run clean && npm run buildProduction && npm --workspaces run cleanBuildProduction",
     "watch": "tsc --project tsconfig.json --watch",
     "start": "node ./dist/cli.js",
     "start:bridge": "node ./dist/cli.js --bridge",
@@ -132,14 +132,15 @@
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "clean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?*",
-    "reset": "npm run clean && npm install && npm run build && (npm link || sudo npm link) && shx chmod +x bin/matterbridge.js bin/mb_mdns.js bin/mb_coap.js && npx jest --clearCache",
+    "deepClean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?*",
+    "reset": "npm run deepClean && npm install && npm run build && (npm link || sudo npm link) && shx chmod +x bin/matterbridge.js bin/mb_mdns.js bin/mb_coap.js && npx jest --clearCache",
     "git:status": "git status && git branch -vv && git diff dev origin/dev && git stash list",
     "git:remote": "git remote -v && git remote show origin",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
     "git:hardreset:edge": "git fetch origin && git checkout edge && git reset --hard origin/edge",
     "runMeBeforePublish": "npm run lint && npm run format && npm run build && npm run test",
+    "fetchChip": "node scripts/fetch-chip.mjs",
     "updateHtmls": "node ./scripts/marked.mjs",
     "prepublishOnly": "npm pkg delete devDependencies scripts && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
     "prepublishOnlyProduction": "npm run cleanBuildProduction && npm pkg delete devDependencies scripts types && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
