--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "buildProduction": "tsc --project tsconfig.production.json && npm --workspaces run buildProduction",
     "clean": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm --workspaces run clean",
     "cleanBuild": "npm run clean && npm run build && npm --workspaces run cleanBuild",
-    "cleanBuildProduction": "npm run clean && npm run buildProduction && npm --workspaces run cleanBuildProduction",
+    "cleanBuildProduction": "npm run clean && npm run buildProduction",
     "watch": "tsc --project tsconfig.json --watch",
     "start": "node ./dist/cli.js",
     "start:bridge": "node ./dist/cli.js --bridge",
