--- a/.github/workflows/docker-buildx-ubuntu.yml
+++ b/.github/workflows/docker-buildx-ubuntu.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: edge
+          ref: main
 
       - uses: actions/setup-node@v4
         with:
