--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -10,7 +10,7 @@ RUN apt-get update && \
   git 
 
 WORKDIR /app
-COPY ./package.json ./package-lock.json ./tsconfig.base.json ./tsconfig.json ./tsconfig.production.json ./.npmignore ./
+COPY ./package*.json ./tsconfig*.json ./.npmignore ./
 COPY ./src ./src
 COPY ./frontend/package.json ./frontend/package.json
 COPY ./frontend/build ./frontend/build
@@ -19,59 +19,59 @@ COPY ./bin ./bin
 COPY ./packages/mb-lib-test/package*.json ./packages/mb-lib-test/tsconfig*.json ./packages/mb-lib-test/.npmignore ./packages/mb-lib-test/
 COPY ./packages/mb-lib-test/src ./packages/mb-lib-test/src
 
-RUN npm ci && npm run build && npm link 
+RUN npm ci --no-fund --no-audit && npm run build && npm link --no-fund --no-audit
 
 WORKDIR /matterbridge-zigbee2mqtt
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-zigbee2mqtt.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-somfy-tahoma
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-somfy-tahoma.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-shelly
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-shelly.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-hass
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-hass.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-webhooks
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-webhooks.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-test
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-test.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-example-accessory-platform
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-example-accessory-platform.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-example-dynamic-platform
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-example-dynamic-platform.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-eve-door
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-door.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-eve-motion
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-motion.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-eve-energy
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-energy.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-eve-room
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-room.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-eve-weather
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-weather.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci --no-fund --no-audit && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /app
 RUN rm -rf tsconfig.tsbuildinfo ./dist && npm run buildProduction && npm pkg delete devDependencies scripts types && rm -rf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack 
@@ -105,7 +105,7 @@ COPY --from=builder \
 RUN apt-get update && \
   apt-get install -y --no-install-recommends curl && \
   apt-get clean && \
-  npm install -g --omit=dev *.tgz && \
+  npm install -g --no-fund --no-audit --omit=dev *.tgz && \
   npm uninstall -g corepack && \
   npm cache clean --force && \
   rm *.tgz && \
