--- a/packages/dgram/package.json
+++ b/packages/dgram/package.json
@@ -76,7 +76,7 @@
   },
   "dependencies": {
     "node-ansi-logger": "3.1.1",
-    "@matterbridge/jest-utils": "^0.0.1"
+    "@matterbridge/jest-utils": "0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "9.39.2",
