--- a/.github/workflows/publish-dev-daily.yml
+++ b/.github/workflows/publish-dev-daily.yml
@@ -43,11 +43,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint & test & build
+      - name: Build, lint and test
         run: |
-          npm run lint
           npm run buildProduction
           npm install -g .
+          npm run lint
           npm run test
           npm pkg delete devDependencies scripts types
           npx rimraf ./node_modules
